--- a/assets/css/destination.css
+++ b/assets/css/destination.css
@@ -189,7 +189,7 @@ aside h3 {
   }
   .static {
     position: fixed;
-    width: 100%;
+    max-width: 100%;
   }
   .logo {
     display: flex;
@@ -238,14 +238,14 @@ aside h3 {
   }
   section {
     flex-direction: column;
-    width: 100%;
+    max-width: 100%;
     gap: 5rem;
   }
   .destination-img {
     width: 100%;
   }
   .destination-text {
-    width: 100%;
+    width: 90%;
     text-align: center;
     align-items: center;
   }
@@ -255,10 +255,16 @@ aside h3 {
 }
 @media screen and (max-width: 500px) {
   .image {
-    max-width: 90%;
+    max-width: 80%;
   }
   .destination {
-    padding: 20px 4px 30px 4px;
+    padding: 20px 20px 30px;
+  }
+  header {
+    padding: 0;
+  }
+  .logo {
+    margin-right: 0;
   }
 }
 @media screen and (max-width: 450px) {
