--- a/assets/css/crew.css
+++ b/assets/css/crew.css
@@ -44,7 +44,7 @@ header {
   text-decoration: none;
   transition: all 0.4s ease-in-out;
 }
-.nav li:hover {
+.nav .link {
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 23px;
