--- a/assets/css/tech.css
+++ b/assets/css/tech.css
@@ -43,7 +43,7 @@ header {
   text-decoration: none;
   transition: all 0.4s ease-in-out;
 }
-.nav li:hover {
+.nav .link {
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 23px;
