--- a/assets/css/crew.css
+++ b/assets/css/crew.css
@@ -6,15 +6,33 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+body {
+  max-width: 100vw;
+  min-height: 100vh;
+}
 .crew {
   max-width: 100vw;
-  height: 100%;
+  min-height: 100vh;
   background-image: url(/assets/crew/background-crew-desktop.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
   padding-top: 30px;
   position: relative;
+  /* overflow: hidden; */
+  animation: zoomInOut 20s linear infinite forwards;
+}
+
+@keyframes zoomInOut {
+  0% {
+    background-size: 100%;
+  }
+  50% {
+    background-size: 150%;
+  }
+  100% {
+    background-size: 100%;
+  }
 }
 
 header {
@@ -22,7 +40,7 @@ header {
   align-items: center;
   gap: 5rem;
   padding-left: 50px;
-  margin-bottom: 3rem;
+  margin-bottom: 5vh;
   /* position: relative; */
 }
 .logo {
@@ -71,10 +89,15 @@ header {
 }
 .head {
   color: white;
-  font-size: 20px;
+  padding-left: 2rem;
+  margin-bottom: 3.5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
   font-weight: 300;
-  margin-left: 4rem;
-  letter-spacing: 0.3rem;
+  font-size: 20px;
+}
+.head span {
+  color: gray;
 }
 section {
   display: flex;
@@ -125,7 +148,8 @@ section {
   justify-content: center;
 }
 .crew-image img {
-  width: 70%;
+  width: 100%;
+  max-width: 70%;
 }
 @media screen and (max-width: 950px) {
   .crew-text .name {
@@ -135,6 +159,20 @@ section {
     width: 80%;
   }
 }
+@media screen and (max-width: 890px) {
+  @keyframes zoomInOut {
+    0% {
+      background-size: 400%;
+    }
+    50% {
+      background-size: 250%;
+    }
+    100% {
+      background-size: 200%;
+    }
+  }
+}
+
 @media screen and (max-width: 850px) {
   .crew-text .name {
     font-size: 30px;
@@ -192,9 +230,12 @@ section {
   header {
     margin-bottom: 2rem;
   }
+  .crew {
+    overflow: scroll;
+  }
   .head {
     margin-bottom: 3rem;
-    margin-left: 2rem;
+    /* margin-left: 2rem; */
   }
   .btns {
     align-items: center;
@@ -241,5 +282,20 @@ section {
   }
   .nav {
     width: 60%;
+  }
+  .head {
+    font-size: 14px;
+  }
+
+  @keyframes zoomInOut {
+    0% {
+      background-size: 120%;
+    }
+    50% {
+      background-size: 140%;
+    }
+    100% {
+      background-size: 170%;
+    }
   }
 }
