--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,27 @@
 }
 .home {
   max-width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-image: url(/assets/home/background-home-desktop.jpg);
   background-position: center;
   background-size: cover;
+  /* background-attachment: fixed; */
   position: relative;
   padding-top: 30px;
   position: relative;
+  animation: zoomInOut 20s linear infinite forwards;
+}
+
+@keyframes zoomInOut {
+  0% {
+    background-size: 100%;
+  }
+  50% {
+    background-size: 150%;
+  }
+  100% {
+    background-size: 100%;
+  }
 }
 
 header {
@@ -114,12 +128,41 @@ section {
   border-radius: 50%;
   background-color: white;
 }
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.home-explore .circle:hover {
+  animation: pulse 1s infinite; /* Adjust animation duration as needed */
+}
+
 .circle a {
   font-weight: 100;
-  letter-spacing: 3px;
+  letter-spacing: 0.3rem;
   font-size: 20px;
   text-decoration: none;
   color: grey;
+}
+@media screen and (max-width: 890px) {
+  @keyframes zoomInOut {
+    0% {
+      background-size: 300%;
+    }
+    50% {
+      background-size: 250%;
+    }
+    100% {
+      background-size: 200%;
+    }
+  }
 }
 
 @media screen and (max-width: 850px) {
@@ -225,5 +268,16 @@ section {
   .home-explore .circle {
     width: 160px;
     height: 160px;
+  }
+  @keyframes zoomInOut {
+    0% {
+      background-size: 140%;
+    }
+    50% {
+      background-size: 120%;
+    }
+    100% {
+      background-size: 170%;
+    }
   }
 }
