--- a/assets/css/tech.css
+++ b/assets/css/tech.css
@@ -8,13 +8,26 @@
 }
 .tech {
   max-width: 100vw;
-  height: 100vh;
-  background-image: url(/assets/technology/background-technology-mobile.jpg);
+  min-height: 100vh;
+  background-image: url(/assets/technology/background-technology-desktop.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
   padding-top: 30px;
   position: relative;
+  animation: zoomInOut 20s linear infinite forwards;
+}
+
+@keyframes zoomInOut {
+  0% {
+    background-size: 100%;
+  }
+  50% {
+    background-size: 120%;
+  }
+  100% {
+    background-size: 100%;
+  }
 }
 
 header {
@@ -22,6 +35,7 @@ header {
   align-items: center;
   gap: 5rem;
   padding-left: 50px;
+  margin-bottom: 3rem;
   /* position: relative; */
 }
 .logo {
@@ -68,7 +82,107 @@ header {
   display: none;
   cursor: pointer;
 }
+.head {
+  color: white;
+  padding-left: 5rem;
+  margin-bottom: 3.5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-weight: 300;
+  font-size: 20px;
+}
+.head span {
+  color: gray;
+}
 
+section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  padding-bottom: 2rem;
+}
+.tech-text {
+  max-width: 60%;
+  display: flex;
+  align-items: start;
+  gap: 3rem;
+  padding-left: 3rem;
+  color: white;
+}
+.number {
+  width: 70px;
+  height: 70px;
+  border: 1px solid white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+  font-size: 20px;
+  color: white;
+  font-weight: 200;
+  cursor: pointer;
+}
+.colored {
+  background-color: white;
+  color: gray;
+  font-weight: 700;
+}
+.about {
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 0.1rem;
+  margin-bottom: 1rem;
+  color: gray;
+}
+.name {
+  text-transform: uppercase;
+  font-size: 50px;
+  font-weight: 200;
+  margin-bottom: 1rem;
+}
+.info {
+  color: whitesmoke;
+  font-weight: 200;
+}
+.tech-img {
+  max-width: 40%;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+}
+.images {
+  width: 30%;
+}
+@media screen and (max-width: 1000px) {
+  .name {
+    font-size: 40px;
+  }
+  .images {
+    width: 35%;
+  }
+}
+@media screen and (max-width: 890px) {
+  .name {
+    font-size: 30px;
+  }
+  .info {
+    font-size: 14px;
+  }
+
+  @keyframes zoomInOut {
+    0% {
+      background-size: 300%;
+    }
+    50% {
+      background-size: 250%;
+    }
+    100% {
+      background-size: 200%;
+    }
+  }
+}
 @media screen and (max-width: 850px) {
   .line {
     display: none;
@@ -133,13 +247,70 @@ header {
   .nav .close {
     margin-right: 0px;
   }
+  .head {
+    padding-left: 1rem;
+  }
+  section {
+    flex-direction: column-reverse;
+    width: 100%;
+    padding: 0px 20px;
+    gap: 2rem;
+  }
+  .images {
+    width: 100%;
+  }
+  .tech-text {
+    max-width: 100%;
+    padding: 0px;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .text-info {
+    text-align: center;
+  }
+  .info {
+    font-size: 16px;
+    line-height: 25px;
+  }
+  .text-num {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 2rem;
+  }
+  .tech-img {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 450px) {
   .tech {
-    background-image: url(/assets/technology/background-technology-desktop.jpg);
+    background-image: url(/assets/technology/background-technology-mobile.jpg);
   }
   .nav {
     width: 60%;
+  }
+  .number {
+    width: 50px;
+    height: 50px;
+  }
+  .tech-text {
+    gap: 0.5rem;
+  }
+  .info {
+    font-size: 14px;
+  }
+
+  @keyframes zoomInOut {
+    0% {
+      background-size: 120%;
+    }
+    50% {
+      background-size: 140%;
+    }
+    100% {
+      background-size: 170%;
+    }
   }
 }
