--- a/assets/css/crew.css
+++ b/assets/css/crew.css
@@ -160,6 +160,9 @@ section {
   }
 }
 @media screen and (max-width: 890px) {
+  .crew {
+    animation: unset;
+  }
   @keyframes zoomInOut {
     0% {
       background-size: 300%;
@@ -260,6 +263,7 @@ section {
     padding-bottom: 30px;
     height: 100%;
     background-image: url(/assets/crew/background-crew-tablet.jpg);
+    animation: zoomInOut 20s linear infinite forwards;
   }
 
   header {
