--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,33 +126,29 @@ section {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background-color: white;
-}
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
+  /* background-color: white; */
+  background-image: url(/assets/home/Screenshot_2023-12-29_164744-removebg-preview.png);
+  background-position: center;
+  background-size: cover;
+  transition: all 0.6s ease-in-out;
 }
 
 .home-explore .circle:hover {
-  animation: pulse 1s linear; /* Adjust animation duration as needed */
+  transform: scale(1.2);
 }
 
 .circle a {
   font-weight: 100;
   letter-spacing: 0.3rem;
-  font-size: 20px;
+  font-size: 16px;
   text-decoration: none;
-  color: grey;
+  color: white;
 }
 @media screen and (max-width: 890px) {
-  @keyframes zoomInOut {
+  .home {
+    animation: unset;
+  }
+  /* @keyframes zoomInOut {
     0% {
       background-size: 200vh;
     }
@@ -162,7 +158,7 @@ section {
     100% {
       background-size: 200vh;
     }
-  }
+  } */
 }
 
 @media screen and (max-width: 850px) {
@@ -222,6 +218,7 @@ section {
     padding-bottom: 30px;
     height: 100%;
     background-image: url(/assets/home/background-home-tablet.jpg);
+    animation: zoomInOut 20s linear infinite forwards;
   }
   section {
     flex-direction: column;
@@ -268,6 +265,9 @@ section {
   .home-explore .circle {
     width: 160px;
     height: 160px;
+  }
+  .circle a {
+    font-size: 14px;
   }
   @keyframes zoomInOut {
     0% {
