--- a/assets/css/destination.css
+++ b/assets/css/destination.css
@@ -153,7 +153,7 @@ section {
   align-items: flex-start;
   justify-content: flex-start;
   color: whitesmoke;
-  z-index: 1000000000;
+  z-index: 10000;
 }
 .select {
   display: flex;
@@ -235,7 +235,7 @@ aside h3 {
     transform: translate(100%);
     opacity: 0;
     transition: all 0.5s linear;
-    z-index: 1000000;
+    z-index: 1000000000;
   }
   .nav.active {
     transform: translate(0);
