--- a/assets/css/crew.css
+++ b/assets/css/crew.css
@@ -204,7 +204,7 @@ header {
     width: 70%;
   }
 }
-@media screen and (max-width: 890px) {
+@media screen and (max-width: 1000px) {
   /* .crew {
     animation: unset;
   }
@@ -394,6 +394,7 @@ header {
   .head {
     font-size: 14px;
     text-align: center;
+    margin-left: 0px;
   }
   .crew-text .role {
     font-size: 16px;
